--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="loading">
       <!-- <object type="image/svg+xml" id="loading-image" data="images/farms/ART.svg" width="450px"/></object> -->
-      <div class="boxes">
+      <!-- <div class="boxes">
         <div class="box">
             <div></div>
             <div></div>
@@ -66,7 +66,7 @@
             <div></div>
             <div></div>
         </div>
-      </div>
+      </div>-->
     </div>  
     <div id="root"></div>
   </body>
