--- a/public/index.html
+++ b/public/index.html
@@ -18,10 +18,10 @@
 
 
     <!-- Meta -->
-    <title>Artemis Protocol</title>
+    <title>Artemis</title>
     <meta
       name="description"
-      content="Artemis is a multi-product DeFi protocol built on Harmony."
+      content="Artemis is a multi-product DeFi protocol with launchpad capabilities built on Harmony"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, minimum-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -33,11 +33,11 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Artemis Protocol" />
 
-    <meta property="og:title" content="Artemis is a multi-product DeFi protocol built on Harmony." />
+    <meta property="og:title" content="Artemis is a multi-product DeFi protocol with launchpad capabilities built on Harmony" />
     <meta property="og:image" content="https://i.imgur.com/7mcKTpf.png" />
     <meta
       name="og:description"
-      content="Artemis is a multi-product DeFi protocol built on Harmony."
+      content="Artemis is a multi-product DeFi protocol with launchpad capabilities built on Harmony"
     />
 
     <link rel="stylesheet" type="text/css" href="./index.css">
